--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1>Infocomm Smart Classroom</h1>
+    <h1><strong>Infocomm Smart Classroom</strong></h1>
+    <p><h2>Homeworkie</h2></p>
+    
+    
 </body>
 </html>
