--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 <body>
     <h1><strong>Infocomm Smart Classroom</strong></h1>
     <p><h2>Homeworkie</h2></p>
+    <a href="https://en.wikipedia.org/wiki/Tilapia">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRnt8TADXo8G6SGSwPrq8mdmGMXU5cqcYtd2oaO_zdH260k7Obc">
-    
+    </a>
     
 </body>
 </html>
