--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1>Infocomm Smart Classroom</h1>
+    <div class="navbar">
+        <h1>Infocomm Smart Classroom</h1>
+    </div>
+    
 </body>
 </html>
