--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="navbar">
         <h1>Infocomm Smart Classroom</h1>
     </div>
-    
+    <div class="nav-displace"></div>
+    <h1>Homework:</h1>
 </body>
 </html>
