--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         <h1>Infocomm Smart Classroom</h1>
     </div>
     <div class="nav-displace"></div>
-    <h1>Homework:</h1>
+    <h1 class="hw">Homework:</h1>
 </body>
 </html>
