--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <h1>Infocomm Smart Classroom</h1>
     </div>
     <div class="nav-displace"></div>
-    <h1 class="hw">Homework:</h1>
+    <h1 class="hw">Homework List:</h1>
+    <ul class="HWlist">
+    </ul>
 </body>
 </html>
